@@ -198,7 +198,7 @@
     </widget>
    </item>
    <item row="3" column="0" colspan="2">
-    <widget class="QCheckBox" name="storeCoversInMpdDir">
+    <widget class="QCheckBox" name="storeLyricsInMpdDir">
      <property name="text">
       <string>Save downloaded lyrics into music folder</string>
      </property>
